# app/controllers/PostController.js
@@ -1,5 +1,6 @@
 const Post = require('../models/post');
 const Controller = require("./Controller");
+const {Types} = require("mongoose");
 
 class PostController extends Controller{
 
@@ -29,15 +30,28 @@ class PostController extends Controller{
 		/**
 			#swagger.responses[200] = {
 				description: 'Posts found',
-				schema:{"$ref": "#/components/schemas/Post"}
+				schema:{"$ref": "#/components/schemas/PostWithComments"}
 			}
 		 */
 		try {
-			const post = await Post.findById(req.params.id);
-			if (!post) {
+			const post = await Post.aggregate([
+				{
+					$match: {_id: new Types.ObjectId(req.params.id)}
+				},
+				{
+					$lookup: {
+						from: 'comments',
+						localField: 'comments',
+						foreignField: '_id',
+						as: 'comments'
+					}
+				},
+				{ $limit: 1 }
+			]);
+			if (!post.length) {
 				return super.notFound(res);
 			}
-			super.success(res, post);
+			super.success(res, post[0]);
 		} catch (error) {
 			super.error(res, error);
 		}
@@ -107,6 +121,7 @@ class PostController extends Controller{
 			super.error(res, error);
 		}
 	}
+
 }
 
 module.exports = new PostController()
