# swagger_output.json
@@ -85,12 +85,12 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Post"
+                  "$ref": "#/components/schemas/PostWithComments"
                 }
               },
               "application/xml": {
                 "schema": {
-                  "$ref": "#/components/schemas/Post"
+                  "$ref": "#/components/schemas/PostWithComments"
                 }
               }
             }
@@ -155,6 +155,53 @@
                 "schema": {
                   "$ref": "#/components/schemas/Post"
                 }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/posts/{id}/comments": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Post created successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Comment"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/Comment"
+                }
+              }
+            }
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateCommentRequest"
+              }
+            },
+            "application/xml": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateCommentRequest"
               }
             }
           }
@@ -249,6 +296,114 @@
         },
         "xml": {
           "name": "Post"
+        }
+      },
+      "PostWithComments": {
+        "type": "object",
+        "properties": {
+          "_id": {
+            "type": "string",
+            "example": "string"
+          },
+          "entry": {
+            "type": "string",
+            "example": "string"
+          },
+          "categories": {
+            "type": "array",
+            "example": [
+              "string"
+            ],
+            "items": {
+              "type": "string"
+            }
+          },
+          "createdAt": {
+            "type": "string",
+            "example": "1999-12-31T23:59:59Z"
+          },
+          "updatedAt": {
+            "type": "string",
+            "example": "1999-12-31T23:59:59Z"
+          },
+          "__v": {
+            "type": "number",
+            "example": 0
+          },
+          "comments": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "_id": {
+                  "type": "string",
+                  "example": "string"
+                },
+                "comment": {
+                  "type": "string",
+                  "example": "string"
+                },
+                "createdAt": {
+                  "type": "string",
+                  "example": "1999-12-31T23:59:59Z"
+                },
+                "updatedAt": {
+                  "type": "string",
+                  "example": "1999-12-31T23:59:59Z"
+                },
+                "__v": {
+                  "type": "number",
+                  "example": 0
+                }
+              }
+            }
+          }
+        },
+        "xml": {
+          "name": "PostWithComments"
+        }
+      },
+      "CreateCommentRequest": {
+        "type": "object",
+        "properties": {
+          "text": {
+            "type": "string",
+            "example": "string"
+          }
+        },
+        "required": [
+          "text"
+        ],
+        "xml": {
+          "name": "CreateCommentRequest"
+        }
+      },
+      "Comment": {
+        "type": "object",
+        "properties": {
+          "_id": {
+            "type": "string",
+            "example": "string"
+          },
+          "text": {
+            "type": "string",
+            "example": "string"
+          },
+          "createdAt": {
+            "type": "string",
+            "example": "1999-12-31T23:59:59Z"
+          },
+          "updatedAt": {
+            "type": "string",
+            "example": "1999-12-31T23:59:59Z"
+          },
+          "__v": {
+            "type": "number",
+            "example": 0
+          }
+        },
+        "xml": {
+          "name": "Comment"
         }
       }
     }
